--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/bodega/busquedaBodega.zul
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/bodega/busquedaBodega.zul
@@ -4,10 +4,10 @@
     xmlns:h="http://www.w3.org/1999/xhtml"
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
     xsi:schemaLocation="http://www.zkoss.org/2005/zul http://www.zkoss.org/2005/zul/zul.xsd">
-    <window id="busquedaClienteWindow"
-            title="Busqueda Clientes"
+    <window id="busquedaBodegaWindow"
+            title="Busqueda Bodegas"
             border="normal"
-            use="sv.com.diserv.liquidaciones.web.ui.bodegas.BuscarBodegaCtrl"
+            use="sv.com.diserv.web.ui.bodegas.BuscarBodegaCtrl"
             closable="true"
             width="550px" 
             height="330px"
@@ -22,7 +22,7 @@
                 <button id="btnBuscar"
                         sclass="oT_ButtonWithIcon"
                         image="/images/btnsearch.gif"
-                        tooltiptext="Buscar cliente con criterios seleccionados"  />
+                        tooltiptext="Buscar bodega con criterios seleccionados"  />
                 <button id="btnCerrar"
                         sclass="oT_ButtonWithIcon"
                         image="/images/close.jpg"
@@ -46,12 +46,12 @@
                                   width="100%" 
                                   style="padding: 3px;">
                                 <div>
-                                    <panel id="panelBuquedaCliente" border="none">
+                                    <panel id="panelBuquedaBodega" border="none">
                                         <panelchildren>
                                             <groupbox  mold="3d"
                                                        closable="false">
                                                 <caption image="/images/person.gif"
-                                                         label="Criterios de busqueda Cliente" />
+                                                         label="Criterios de busqueda Bodega" />
                                                 <grid sclass="GridPlain">
                                                     <columns>
                                                         <column align="left" width="160px" />
@@ -60,23 +60,23 @@
                                                     <rows>
                                                         <row>
                                                             <hbox>
-                                                                <label value="Id Cliente" />
+                                                                <label value="Id Bodega" />
                                                                 <label value="*" style="color:red;font-size:10px" />
                                                             </hbox>
                                                             <intbox
-                                                                id="txtIdCliente"
+                                                                id="txtIdBodega"
                                                                 hflex="1"
                                                                 maxlength="10"
-                                                                tooltiptext="Identificador unico de cliente"
+                                                                tooltiptext="Identificador unico de bodega"
                                                             />
                                                         </row>
                                                         <row>
                                                             <hbox>
                                                                 <label
-                                                                    value="Nombre cliente : " />
+                                                                    value="Nombre bodega : " />
                                                                 <label value="*" style="color:red; font-size:10px" />
                                                             </hbox>
-                                                            <textbox  id="txtNombreCliente" 
+                                                            <textbox  id="txtNombreBodega" 
                                                                       hflex="1" />
                                                         </row>                                                              
                                                         
