--- a/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/persona/busquedaCliente.zul
+++ b/SistemaLiquidaciones/SistemaLiquidacionesWAR/web/WEB-INF/xhtml/persona/busquedaCliente.zul
@@ -7,7 +7,7 @@
     <window id="busquedaClienteWindow"
             title="Busqueda Clientes"
             border="normal"
-            use="sv.com.diserv.web.ui.personas.BuscarPersonaCtrl"
+            use="sv.com.diserv.web.ui.personas.BuscarClienteCtrl"
             closable="true"
             width="550px" 
             height="330px"
